--- a/style.css
+++ b/style.css
@@ -1,3 +1,63 @@
 * {
-    font-family: 'Merriweather Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+
+    color: white;
+}
+
+body {
+    background: #22212C;
+}
+
+section {
+    width: 480px;
+    margin: 24px 32px 24px;
+    display: grid;
+    gap: 24px;
+}
+
+header {
+    padding: 24px;
+
+    background: #302f3d;
+    border-radius: 10px;
+}
+
+header img {
+    width: 120px;
+    border-radius: 50%;
+}
+
+address {
+    padding: 24px;
+
+    background: #302f3d;
+    border-radius: 10px;
+}
+
+address li {
+    padding: 14px;
+}
+
+footer {
+    padding: 24px;
+    
+    background: #302f3d;
+    border-radius: 10px;
+}
+
+.technologly-list {
+    display: flex;
+    gap: 32px;
+}
+
+footer li {
+    margin: auto;
+    width: 80px;
+    padding: 5px;
+
+    border-radius: 15px;
+    background: rgb(230, 123, 141);
 }
