--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header p {
 }
 
 #social li {
-    padding: 12px;
+    padding: 12px
 }
 
 #technology {
@@ -116,12 +116,15 @@ main {
 }
 
 #star-1 {
+    margin-top: 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 #project-1 {
+
+    height: 190px;
     grid-area: p-1;
     background: #302F3D;
     border-radius: 10px;
@@ -140,12 +143,14 @@ main {
 
 
 #star-2 {
+    margin-top: 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 #project-2 {
+    height: 190px;
     grid-area: p-2;
     background: #302F3D;
     border-radius: 10px;
@@ -154,10 +159,6 @@ main {
 
 #project-2 h4 {
     padding-bottom: 12px;
-}
-
-#project-2 p {
-    display: flex;
 }
 
 #project-2 p,span {
@@ -169,8 +170,45 @@ main {
 
 footer {
     grid-area: foot;
-    background: #302F3D;
-    border-radius: 10px;
     margin-bottom: 300px;
     
+}
+
+
+#posts h2 {
+    background: #302F3D;
+    margin-bottom: 24px;
+    padding: 24px;
+    border-radius: 10px;
+}
+
+#post {
+    background: #302F3D;
+    border-radius: 10px;
+
+    display: flex;
+    gap: 10px;
+}
+
+#image-post img {
+    width: 120px;
+    border-radius: 10px;
+    margin: 24px 10px 24px 24px;
+}
+
+#info-post {
+    padding: 24px 0 0;
+
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
+}
+
+#info-post p {
+    margin-bottom: 5px;
+}
+
+#tech-post ul {
+    display: flex;
+    gap: 12px;
 }
