--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header #h-3 ul {
 
 header #h-3 li {
     padding: 10px;
-    background: #038bbb;
+    background: #3a89c9;
     border-radius: 16px;
     font-size: 12px;
     color: #22212C;
